# human-in-loop-voice-agent

./: .env.local  .gitignore  README.md  agent.py  database.py  frontdesk.db  frontdesk.db-journal  main.py  models.py  notifier.py  package-lock.json  prompt.py  pyproject.toml  tool.py
static/: main.js
templates/: dashboard.html
